--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
         
         <div class="observers-grid">
             <div class="observer-card">
-                <div class="observer-photo" style="background-image: url('delphine.jpg'); background-color: #e2e8f0;">
+                <div class="observer-photo" style="background-image: url('delphine.png'); background-color: #e2e8f0;">
                     <!-- Si l'image n'est pas disponible, afficher l'initiale -->
                     <span style="display: none;">SD</span>
                 </div>
@@ -592,7 +592,7 @@
             </div>
             
             <div class="observer-card">
-                <div class="observer-photo" style="background-image: url('fatou.jpg'); background-color: #e2e8f0;">
+                <div class="observer-photo" style="background-image: url('fatou.jpeg'); background-color: #e2e8f0;">
                     <!-- Si l'image n'est pas disponible, afficher l'initiale -->
                     <span style="display: none;">FW</span>
                 </div>
